# AcpiTableGenerator

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  README.zh.md  TESTING.md  TESTING.zh.md  requirements.txt
.github/workflows/: build-and-upload-aml.yml
include/: acpi.h  common.h  utils.h
include/common/: dbg2.h  facp.h  facs.h  gtdt.h  madt.h  mcfg.h  pptt.h  spcr.h
include/sm7325/: pptt.h
include/sm8150/: pptt.h
include/sm8250/: pptt.h
include/sm8350/: pptt.h
include/sm8450/: pptt.h
include/sm8475/: pptt.h
include/sm8550/: pptt.h
include/sm8650/: pptt.h
include/sm8750/: pptt.h
include/sm8845/: pptt.h
include/sm8850/: pptt.h
lib/: utils.c
src/: acpi_extractor.c  iort_reader.c  pptt.c
src/dummy/: facp.c  facs.c  madt.c  mcfg.c  pptt.c  spcr.c
test/: aml_validator.py  pptt_validate.py  run_all_tests.py  verify_node_references.py  verify_per_core_l2.py  verify_topology.py
tools/: dtb_to_madt.py  dtb_to_mcfg.py  dtb_to_table_header.py  parse_dt.py
